<resources>
    <string name="app_name">AndroidActivityLifecycle</string>
    <string name="login">Login:</string>
    <string name="please_provide_a_login">please_provide_a_login</string>
    <string name="password">password</string>
    <string name="please_provide_a_password">please_provide_a_password</string>
    <string name="strlogin">Login</string>
    <string name="please_give_login">please_give_login</string>
    <string name="please_give_password">please_give_password</string>
    <string name="back">hint</string>
    <string name="login_hint">hint\n</string>
    <string name="online">hint</string>
    <string name="profile">hint</string>
    <string name="go_to_profile">hint\n</string>
    <string name="Back">Back</string>
    <string name="Go_to_profile">Go To Profile</string>
    <string name="Login">Login</string>
    <string name="Online">Online</string>
</resources>